# gh-notifier

./: README.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/src/: api.rs  lib.rs  main.rs
